--- a/less/portfolio.less
+++ b/less/portfolio.less
@@ -7,9 +7,9 @@
 .portfolio-grid{
     width: 90%;
     display: flex;
-    flex-wrap: wrap;
+	flex-wrap: wrap;
+	margin-top: -50px;
     margin-bottom: 55px;
-	margin-top: 55px;
 	justify-content: center;
 }
 
